<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/cwProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="150dp"
        tools:src="@tools:sample/avatars"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cwProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/background_card_view"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvPhoneNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/hint_tv_phoneNumber"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=""
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toEndOf="@id/tvPhoneNumberLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneNumberLabel" />

            <TextView
                android:id="@+id/tvNickNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/hint_tv_nickName"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneNumberLabel" />

            <TextView
                android:id="@+id/tvNickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text=""
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toEndOf="@id/tvNickNameLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneNumberLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvNickNameLabel" />

            <TextView
                android:id="@+id/tvZodiacLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/hint_tv_zodiac"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNickNameLabel" />

            <TextView
                android:id="@+id/tvZodiac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text=""
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toEndOf="@id/tvZodiacLabel"
                app:layout_constraintTop_toBottomOf="@id/tvNickNameLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvZodiacLabel" />

            <TextView
                android:id="@+id/tvBirthDayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/hint_tv_birthday"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvZodiacLabel" />

            <EditText
                android:id="@+id/edBirthDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_et_birthday"
                android:inputType="number"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toEndOf="@+id/tvBirthDayLabel"
                app:layout_constraintTop_toBottomOf="@id/tvZodiacLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvBirthDayLabel" />

            <TextView
                android:id="@+id/tvCityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/hint_tv_city"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBirthDayLabel" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_et_city"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toEndOf="@id/tvCityLabel"
                app:layout_constraintTop_toBottomOf="@id/tvBirthDayLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvCityLabel" />

            <TextView
                android:id="@+id/tvStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/hint_status"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCityLabel" />

            <EditText
                android:id="@+id/etStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_et_status"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:fontFamily="monospace"
                app:layout_constraintStart_toEndOf="@id/tvStatusLabel"
                app:layout_constraintTop_toBottomOf="@id/tvCityLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvStatusLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSaveProfileData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/button"
        android:text="@string/button_save_profile_data"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>